// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion rendering renders an item with interactive content 1`] = `
<Accordion
  allowMultipleExpanded={false}
  data-cy="accordion"
>
  <Component
    allowMultipleExpanded={false}
  >
    <Stack
      data-cy="accordion"
      spacingSize="m"
      tag="div"
    >
      <div
        className="css-1h7en16"
        data-cy="accordion"
      >
        <AccordionItem
          data-cy="accordionItem"
          id="customId"
        >
          <Component
            expandedItems={Array []}
            id="customId"
          >
            <div
              data-cy="accordionItem"
            >
              <AccordionItemTitleInteractive
                appearance="danger"
                data-cy="accordionItemTitle"
                headingLevel={3}
              >
                <AccordionItemTitleOuter
                  appearance="danger"
                  data-cy="accordionItemTitle accordionItemTitle.danger"
                  isExpanded={false}
                >
                  <div
                    className="css-1khdlw2"
                    data-cy="accordionItemTitle accordionItemTitle.danger"
                  >
                    <ResetButton
                      aria-controls="customId-content"
                      aria-expanded={false}
                      className="css-3bwp7q"
                      data-cy="accordionItemTitle-button"
                      onClick={[Function]}
                    >
                      <button
                        aria-controls="customId-content"
                        aria-expanded={false}
                        className="css-8x73u2"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          tabIndex={-1}
                        />
                      </button>
                    </ResetButton>
                    <AccordionItemTitleInner
                      isExpanded={false}
                      isInteractive={true}
                    >
                      <span
                        className="css-og12hz"
                      >
                        <span
                          className="css-1321nl5"
                        >
                          <Icon
                            shape="system-triangle-right"
                            size="16px"
                          >
                            <svg
                              aria-label="system-triangle-right icon"
                              className="css-zgvqkl"
                              data-cy="icon"
                              height={16}
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 16 16"
                              width={16}
                            >
                              <use
                                xlinkHref="#system-triangle-right"
                              />
                            </svg>
                          </Icon>
                        </span>
                        <span
                          className="css-bleycz"
                        >
                          <h3
                            className="css-n00hzg"
                            data-cy="accordionItemTitle-heading"
                            id="customId-heading"
                          >
                            Panel 1
                          </h3>
                          <button
                            id="interaction"
                          >
                            test
                          </button>
                        </span>
                      </span>
                    </AccordionItemTitleInner>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitleInteractive>
              <AccordionItemContent
                data-cy="accordionItemContent"
                paddingSize="m"
              >
                <div
                  aria-labelledby="customId-heading"
                  className="css-16wkd0c"
                  data-cy="accordionItemContent"
                  hidden={true}
                  id="customId-content"
                >
                  Content 1
                </div>
              </AccordionItemContent>
            </div>
          </Component>
        </AccordionItem>
        <AccordionItem
          data-cy="accordionItem"
        >
          <Component
            expandedItems={Array []}
            id="accordionItem5"
          >
            <div
              data-cy="accordionItem"
            >
              <AccordionItemTitleInteractive
                appearance="danger"
                data-cy="accordionItemTitle"
                headingLevel={3}
              >
                <AccordionItemTitleOuter
                  appearance="danger"
                  data-cy="accordionItemTitle accordionItemTitle.danger"
                  isExpanded={false}
                >
                  <div
                    className="css-1khdlw2"
                    data-cy="accordionItemTitle accordionItemTitle.danger"
                  >
                    <ResetButton
                      aria-controls="accordionItem5-content"
                      aria-expanded={false}
                      className="css-3bwp7q"
                      data-cy="accordionItemTitle-button"
                      onClick={[Function]}
                    >
                      <button
                        aria-controls="accordionItem5-content"
                        aria-expanded={false}
                        className="css-8x73u2"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          tabIndex={-1}
                        />
                      </button>
                    </ResetButton>
                    <AccordionItemTitleInner
                      isExpanded={false}
                      isInteractive={true}
                    >
                      <span
                        className="css-og12hz"
                      >
                        <span
                          className="css-1321nl5"
                        >
                          <Icon
                            shape="system-triangle-right"
                            size="16px"
                          >
                            <svg
                              aria-label="system-triangle-right icon"
                              className="css-zgvqkl"
                              data-cy="icon"
                              height={16}
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 16 16"
                              width={16}
                            >
                              <use
                                xlinkHref="#system-triangle-right"
                              />
                            </svg>
                          </Icon>
                        </span>
                        <span
                          className="css-bleycz"
                        >
                          <h3
                            id="accordionItem5-heading"
                          >
                            Panel 1
                          </h3>
                          <button
                            id="interaction"
                          >
                            test
                          </button>
                          <button
                            aria-controls="accordionItem5-content"
                            aria-expanded={false}
                            id="toggle"
                            onClick={[Function]}
                          >
                            toggle
                          </button>
                        </span>
                      </span>
                    </AccordionItemTitleInner>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitleInteractive>
              <AccordionItemContent
                data-cy="accordionItemContent"
                paddingSize="m"
              >
                <div
                  aria-labelledby="accordionItem5-heading"
                  className="css-16wkd0c"
                  data-cy="accordionItemContent"
                  hidden={true}
                  id="accordionItem5-content"
                >
                  Content 2
                </div>
              </AccordionItemContent>
            </div>
          </Component>
        </AccordionItem>
        <AccordionItem
          data-cy="accordionItem"
        >
          <Component
            expandedItems={Array []}
            id="accordionItem6"
          >
            <div
              data-cy="accordionItem"
            >
              <AccordionItemTitleInteractive
                data-cy="accordionItemTitle"
                disabled={true}
                headingLevel={3}
              >
                <AccordionItemTitleOuter
                  data-cy="accordionItemTitle accordionItemTitle.disabled"
                  disabled={true}
                  isExpanded={false}
                >
                  <div
                    className="css-1tnc4bw"
                    data-cy="accordionItemTitle accordionItemTitle.disabled"
                  >
                    <ResetButton
                      aria-controls="accordionItem6-content"
                      aria-expanded={false}
                      className="css-3bwp7q"
                      data-cy="accordionItemTitle-button"
                      disabled={true}
                      onClick={[Function]}
                    >
                      <button
                        aria-controls="accordionItem6-content"
                        aria-expanded={false}
                        className="css-1urm9n8"
                        data-cy="accordionItemTitle-button"
                        disabled={true}
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          tabIndex={-1}
                        />
                      </button>
                    </ResetButton>
                    <AccordionItemTitleInner
                      isExpanded={false}
                      isInteractive={true}
                    >
                      <span
                        className="css-og12hz"
                      >
                        <span
                          className="css-1321nl5"
                        >
                          <Icon
                            shape="system-triangle-right"
                            size="16px"
                          >
                            <svg
                              aria-label="system-triangle-right icon"
                              className="css-zgvqkl"
                              data-cy="icon"
                              height={16}
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 16 16"
                              width={16}
                            >
                              <use
                                xlinkHref="#system-triangle-right"
                              />
                            </svg>
                          </Icon>
                        </span>
                        <span
                          className="css-bleycz"
                        >
                          <h3
                            className="css-n00hzg"
                            data-cy="accordionItemTitle-heading"
                            id="accordionItem6-heading"
                          >
                            Panel 1
                          </h3>
                          <button
                            id="interaction"
                          >
                            test
                          </button>
                        </span>
                      </span>
                    </AccordionItemTitleInner>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitleInteractive>
              <AccordionItemContent
                data-cy="accordionItemContent"
                paddingSize="m"
              >
                <div
                  aria-labelledby="accordionItem6-heading"
                  className="css-16wkd0c"
                  data-cy="accordionItemContent"
                  hidden={true}
                  id="accordionItem6-content"
                >
                  Content 1
                </div>
              </AccordionItemContent>
            </div>
          </Component>
        </AccordionItem>
      </div>
    </Stack>
  </Component>
</Accordion>
`;

exports[`Accordion rendering renders with expanded items 1`] = `
<Accordion
  allowMultipleExpanded={false}
  data-cy="accordion"
  initialExpandedItems={
    Array [
      "panel1",
      "panel2",
      "panel3",
    ]
  }
>
  <Component
    allowMultipleExpanded={false}
    initialExpandedItems={
      Array [
        "panel1",
        "panel2",
        "panel3",
      ]
    }
  >
    <Stack
      data-cy="accordion"
      spacingSize="m"
      tag="div"
    >
      <div
        className="css-1h7en16"
        data-cy="accordion"
      >
        <AccordionItem
          data-cy="accordionItem"
          id="panel1"
        >
          <Component
            expandedItems={
              Array [
                "panel1",
                "panel2",
                "panel3",
              ]
            }
            id="panel1"
          >
            <div
              data-cy="accordionItem accordionItem.expanded"
            >
              <AccordionItemTitle
                data-cy="accordionItemTitle"
                headingLevel={3}
              >
                <AccordionItemTitleOuter
                  data-cy="accordionItemTitle"
                  isExpanded={true}
                >
                  <div
                    className="css-3n1jto"
                    data-cy="accordionItemTitle"
                  >
                    <h3
                      className="css-n00hzg"
                      data-cy="accordionItemTitle-heading"
                      id="panel1-heading"
                    >
                      <ResetButton
                        aria-controls="panel1-content"
                        aria-expanded="false"
                        className="css-bleycz"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="panel1-content"
                          aria-expanded="false"
                          className="css-1sg7lln"
                          data-cy="accordionItemTitle-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            tabIndex={-1}
                          >
                            <AccordionItemTitleInner
                              isExpanded={true}
                            >
                              <span
                                className="css-11c46d8"
                              >
                                <span
                                  className="css-1321nl5"
                                >
                                  <Icon
                                    shape="system-triangle-down"
                                    size="16px"
                                  >
                                    <svg
                                      aria-label="system-triangle-down icon"
                                      className="css-zgvqkl"
                                      data-cy="icon"
                                      height={16}
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width={16}
                                    >
                                      <use
                                        xlinkHref="#system-triangle-down"
                                      />
                                    </svg>
                                  </Icon>
                                </span>
                                <span
                                  className="css-bleycz"
                                >
                                  Panel 1
                                </span>
                              </span>
                            </AccordionItemTitleInner>
                          </div>
                        </button>
                      </ResetButton>
                    </h3>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitle>
              <AccordionItemContent
                data-cy="accordionItemContent"
                paddingSize="m"
              >
                <div
                  aria-labelledby="panel1-heading"
                  className="css-hv2xnk"
                  data-cy="accordionItemContent"
                  hidden={false}
                  id="panel1-content"
                >
                  Content 1
                </div>
              </AccordionItemContent>
            </div>
          </Component>
        </AccordionItem>
        <AccordionItem
          data-cy="accordionItem"
          id="panel2"
        >
          <Component
            expandedItems={
              Array [
                "panel1",
                "panel2",
                "panel3",
              ]
            }
            id="panel2"
          >
            <div
              data-cy="accordionItem accordionItem.expanded"
            >
              <AccordionItemTitle
                data-cy="accordionItemTitle"
                headingLevel={3}
              >
                <AccordionItemTitleOuter
                  data-cy="accordionItemTitle"
                  isExpanded={true}
                >
                  <div
                    className="css-3n1jto"
                    data-cy="accordionItemTitle"
                  >
                    <h3
                      className="css-n00hzg"
                      data-cy="accordionItemTitle-heading"
                      id="panel2-heading"
                    >
                      <ResetButton
                        aria-controls="panel2-content"
                        aria-expanded="false"
                        className="css-bleycz"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="panel2-content"
                          aria-expanded="false"
                          className="css-1sg7lln"
                          data-cy="accordionItemTitle-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            tabIndex={-1}
                          >
                            <AccordionItemTitleInner
                              isExpanded={true}
                            >
                              <span
                                className="css-11c46d8"
                              >
                                <span
                                  className="css-1321nl5"
                                >
                                  <Icon
                                    shape="system-triangle-down"
                                    size="16px"
                                  >
                                    <svg
                                      aria-label="system-triangle-down icon"
                                      className="css-zgvqkl"
                                      data-cy="icon"
                                      height={16}
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width={16}
                                    >
                                      <use
                                        xlinkHref="#system-triangle-down"
                                      />
                                    </svg>
                                  </Icon>
                                </span>
                                <span
                                  className="css-bleycz"
                                >
                                  Panel 2
                                </span>
                              </span>
                            </AccordionItemTitleInner>
                          </div>
                        </button>
                      </ResetButton>
                    </h3>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitle>
              <AccordionItemContent
                data-cy="accordionItemContent"
                paddingSize="m"
              >
                <div
                  aria-labelledby="panel2-heading"
                  className="css-hv2xnk"
                  data-cy="accordionItemContent"
                  hidden={false}
                  id="panel2-content"
                >
                  Content 2
                </div>
              </AccordionItemContent>
            </div>
          </Component>
        </AccordionItem>
        <AccordionItem
          data-cy="accordionItem"
          id="panel3"
        >
          <Component
            expandedItems={
              Array [
                "panel1",
                "panel2",
                "panel3",
              ]
            }
            id="panel3"
          >
            <div
              data-cy="accordionItem accordionItem.expanded"
            >
              <AccordionItemTitle
                data-cy="accordionItemTitle"
                headingLevel={3}
              >
                <AccordionItemTitleOuter
                  data-cy="accordionItemTitle"
                  isExpanded={true}
                >
                  <div
                    className="css-3n1jto"
                    data-cy="accordionItemTitle"
                  >
                    <h3
                      className="css-n00hzg"
                      data-cy="accordionItemTitle-heading"
                      id="panel3-heading"
                    >
                      <ResetButton
                        aria-controls="panel3-content"
                        aria-expanded="false"
                        className="css-bleycz"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="panel3-content"
                          aria-expanded="false"
                          className="css-1sg7lln"
                          data-cy="accordionItemTitle-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            tabIndex={-1}
                          >
                            <AccordionItemTitleInner
                              isExpanded={true}
                            >
                              <span
                                className="css-11c46d8"
                              >
                                <span
                                  className="css-1321nl5"
                                >
                                  <Icon
                                    shape="system-triangle-down"
                                    size="16px"
                                  >
                                    <svg
                                      aria-label="system-triangle-down icon"
                                      className="css-zgvqkl"
                                      data-cy="icon"
                                      height={16}
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width={16}
                                    >
                                      <use
                                        xlinkHref="#system-triangle-down"
                                      />
                                    </svg>
                                  </Icon>
                                </span>
                                <span
                                  className="css-bleycz"
                                >
                                  Panel 3
                                </span>
                              </span>
                            </AccordionItemTitleInner>
                          </div>
                        </button>
                      </ResetButton>
                    </h3>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitle>
              <AccordionItemContent
                data-cy="accordionItemContent"
                paddingSize="m"
              >
                <div
                  aria-labelledby="panel3-heading"
                  className="css-hv2xnk"
                  data-cy="accordionItemContent"
                  hidden={false}
                  id="panel3-content"
                >
                  Content 3
                </div>
              </AccordionItemContent>
            </div>
          </Component>
        </AccordionItem>
      </div>
    </Stack>
  </Component>
</Accordion>
`;

exports[`Accordion rendering renders with no expanded items 1`] = `
<Accordion
  allowMultipleExpanded={false}
  data-cy="accordion"
>
  <Component
    allowMultipleExpanded={false}
  >
    <Stack
      data-cy="accordion"
      spacingSize="m"
      tag="div"
    >
      <div
        className="css-1h7en16"
        data-cy="accordion"
      >
        <AccordionItem
          data-cy="accordionItem"
          id="customId"
        >
          <Component
            expandedItems={Array []}
            id="customId"
          >
            <div
              data-cy="accordionItem"
            >
              <AccordionItemTitle
                appearance="danger"
                data-cy="accordionItemTitle"
                headingLevel={3}
              >
                <AccordionItemTitleOuter
                  appearance="danger"
                  data-cy="accordionItemTitle accordionItemTitle.danger"
                  isExpanded={false}
                >
                  <div
                    className="css-1khdlw2"
                    data-cy="accordionItemTitle accordionItemTitle.danger"
                  >
                    <h3
                      className="css-n00hzg"
                      data-cy="accordionItemTitle-heading"
                      id="customId-heading"
                    >
                      <ResetButton
                        aria-controls="customId-content"
                        aria-expanded="false"
                        className="css-bleycz"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="customId-content"
                          aria-expanded="false"
                          className="css-1sg7lln"
                          data-cy="accordionItemTitle-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            tabIndex={-1}
                          >
                            <AccordionItemTitleInner
                              isExpanded={false}
                            >
                              <span
                                className="css-11c46d8"
                              >
                                <span
                                  className="css-1321nl5"
                                >
                                  <Icon
                                    shape="system-triangle-right"
                                    size="16px"
                                  >
                                    <svg
                                      aria-label="system-triangle-right icon"
                                      className="css-zgvqkl"
                                      data-cy="icon"
                                      height={16}
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width={16}
                                    >
                                      <use
                                        xlinkHref="#system-triangle-right"
                                      />
                                    </svg>
                                  </Icon>
                                </span>
                                <span
                                  className="css-bleycz"
                                >
                                  Panel 1
                                </span>
                              </span>
                            </AccordionItemTitleInner>
                          </div>
                        </button>
                      </ResetButton>
                    </h3>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitle>
              <AccordionItemContent
                data-cy="accordionItemContent"
                paddingSize="m"
              >
                <div
                  aria-labelledby="customId-heading"
                  className="css-16wkd0c"
                  data-cy="accordionItemContent"
                  hidden={true}
                  id="customId-content"
                >
                  Content 1
                </div>
              </AccordionItemContent>
            </div>
          </Component>
        </AccordionItem>
        <AccordionItem
          data-cy="accordionItem"
        >
          <Component
            expandedItems={Array []}
            id="accordionItem2"
          >
            <div
              data-cy="accordionItem"
            >
              <AccordionItemTitle
                data-cy="accordionItemTitle"
                disabled={true}
                headingLevel={3}
              >
                <AccordionItemTitleOuter
                  data-cy="accordionItemTitle accordionItemTitle.disabled"
                  disabled={true}
                  isExpanded={false}
                >
                  <div
                    className="css-1tnc4bw"
                    data-cy="accordionItemTitle accordionItemTitle.disabled"
                  >
                    <h3
                      className="css-n00hzg"
                      data-cy="accordionItemTitle-heading"
                      id="accordionItem2-heading"
                    >
                      <ResetButton
                        aria-controls="accordionItem2-content"
                        aria-expanded="false"
                        className="css-bleycz"
                        data-cy="accordionItemTitle-button"
                        disabled={true}
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="accordionItem2-content"
                          aria-expanded="false"
                          className="css-p13jo5"
                          data-cy="accordionItemTitle-button"
                          disabled={true}
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            tabIndex={-1}
                          >
                            <AccordionItemTitleInner
                              isExpanded={false}
                            >
                              <span
                                className="css-11c46d8"
                              >
                                <span
                                  className="css-1321nl5"
                                >
                                  <Icon
                                    shape="system-triangle-right"
                                    size="16px"
                                  >
                                    <svg
                                      aria-label="system-triangle-right icon"
                                      className="css-zgvqkl"
                                      data-cy="icon"
                                      height={16}
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width={16}
                                    >
                                      <use
                                        xlinkHref="#system-triangle-right"
                                      />
                                    </svg>
                                  </Icon>
                                </span>
                                <span
                                  className="css-bleycz"
                                >
                                  Panel 2
                                </span>
                              </span>
                            </AccordionItemTitleInner>
                          </div>
                        </button>
                      </ResetButton>
                    </h3>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitle>
              <AccordionItemContent
                data-cy="accordionItemContent"
                paddingSize="m"
              >
                <div
                  aria-labelledby="accordionItem2-heading"
                  className="css-16wkd0c"
                  data-cy="accordionItemContent"
                  hidden={true}
                  id="accordionItem2-content"
                >
                  Content 2
                </div>
              </AccordionItemContent>
            </div>
          </Component>
        </AccordionItem>
        <AccordionItem
          data-cy="accordionItem"
        >
          <Component
            expandedItems={Array []}
            id="accordionItem3"
          >
            <div
              data-cy="accordionItem"
            >
              <AccordionItemTitle
                data-cy="accordionItemTitle"
                headingLevel={2}
              >
                <AccordionItemTitleOuter
                  data-cy="accordionItemTitle"
                  isExpanded={false}
                >
                  <div
                    className="css-49v3w5"
                    data-cy="accordionItemTitle"
                  >
                    <h2
                      className="css-n00hzg"
                      data-cy="accordionItemTitle-heading"
                      id="accordionItem3-heading"
                    >
                      <ResetButton
                        aria-controls="accordionItem3-content"
                        aria-expanded="false"
                        className="css-bleycz"
                        data-cy="accordionItemTitle-button"
                        onClick={[Function]}
                      >
                        <button
                          aria-controls="accordionItem3-content"
                          aria-expanded="false"
                          className="css-1sg7lln"
                          data-cy="accordionItemTitle-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            tabIndex={-1}
                          >
                            <AccordionItemTitleInner
                              isExpanded={false}
                            >
                              <span
                                className="css-11c46d8"
                              >
                                <span
                                  className="css-1321nl5"
                                >
                                  <Icon
                                    shape="system-triangle-right"
                                    size="16px"
                                  >
                                    <svg
                                      aria-label="system-triangle-right icon"
                                      className="css-zgvqkl"
                                      data-cy="icon"
                                      height={16}
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width={16}
                                    >
                                      <use
                                        xlinkHref="#system-triangle-right"
                                      />
                                    </svg>
                                  </Icon>
                                </span>
                                <span
                                  className="css-bleycz"
                                >
                                  Panel 3
                                </span>
                              </span>
                            </AccordionItemTitleInner>
                          </div>
                        </button>
                      </ResetButton>
                    </h2>
                  </div>
                </AccordionItemTitleOuter>
              </AccordionItemTitle>
              <AccordionItemContent
                data-cy="accordionItemContent"
                paddingSize="m"
              >
                <div
                  aria-labelledby="accordionItem3-heading"
                  className="css-16wkd0c"
                  data-cy="accordionItemContent"
                  hidden={true}
                  id="accordionItem3-content"
                >
                  Content 3
                </div>
              </AccordionItemContent>
            </div>
          </Component>
        </AccordionItem>
      </div>
    </Stack>
  </Component>
</Accordion>
`;
